resolve sonar cloud issues